# minivcs

./: .gitignore  .gitmodules  CMakeLists.txt  ec.h  main.c  minivcs.c  minivcs.h  test.c
branch/: CMakeLists.txt  branch.c  branch.h  cp.h  files.c  files.h  name.c  name.h  storage.c  storage.h  test.c
config/: CMakeLists.txt  config.c  config.h  test.c
file/: CMakeLists.txt  compress.c  compress.h  crypt.c  crypt.h  eccrypto.h  encode.c  encode.h  file_transformation_context.c  file_transformation_context.h  file_transformation_controller.c  file_transformation_controller.h  hash.c  hash.h  operations.c  operations.h  test.c
file/layered_stream/: CMakeLists.txt  crypto_stream.c  crypto_stream.h  file_stream.c  file_stream.h  layered_stream.c  layered_stream.h  layered_stream_def.h  mem_stream.c  mem_stream.h  test.c
