add_library(file_operations operations.h operations.c)
target_link_libraries(file_operations config controller transformation_encrypt transformation_decrypt transformation_compress transformation_decompress transformation_b64_encode transformation_replace transformation_hash source_write sink_read source_file sink_file)

add_executable(file_operations_test test.c)
target_link_libraries(file_operations_test file_operations)